# morningbrief

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  README.md  brand-book.html  lambda_function.py  pyproject.toml  samconfig.toml  template.yaml
.claude/agent-memory/prettify-email-design/: MEMORY.md  project_email_design.md
.claude/agents/: prettify-email-design.md
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy.yml
scripts/: build_lambda.py
src/: config.py  fetcher.py  lambda_function.py  renderer.py  sender.py
src/prompts/: system_prompt.txt
src/templates/: email.html  email.txt
terraform/: lambda.tf  main.tf  outputs.tf  variables.tf
terraform/environments/dev/: main.tf
terraform/environments/prod/: main.tf
terraform/modules/morning-brief/: lambda.tf  outputs.tf  variables.tf
tests/: conftest.py  test_config.py  test_fetcher.py  test_lambda_function.py  test_renderer.py  test_sender.py
