[project]
name = "morning-brief"
version = "0.2.0"
description = "Daily AI & tech news brief delivered to your inbox every morning"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "jinja2>=3.1",
    "litellm>=1.0",
    "tavily-python>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
